--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,41 @@
 html {
-    background-color: rgb(21, 126, 0);
-    color: white;
+    background-color: white;
+    color: black;
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
 
+}
+
+button {
+    border: 2px solid #666;
+    padding: 1em 2em;
+    margin: 1.5em;
+}
+
+#quote-container {
+    background-color: white;
+}
+
+.single-quote {
+    padding: 15px;
+}
+.background {
+    display: flex;
+    background-color: grey;
+    background-image: url(./resources/vidar-nordli-mathisen-yJKb_4vjYwA-unsplash.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    min-height: 500px;
+    align-items: center;
+    justify-content: center;
+}
+
+#background-1 {
+    background-image: url(./resources/sticker-mule-qNhstTawQrI-unsplash.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
